@@ -523,6 +523,11 @@ if (isset($_REQUEST['form'])) {
 	$data['config'] = select_config();
 	$data['trends_default'] = DB::getDefault('items', 'trends');
 
+	// Sort interfaces to be listed starting with one selected as 'main'.
+	CArrayHelper::sort($data['interfaces'], [
+		['field' => 'main', 'order' => ZBX_SORT_DOWN]
+	]);
+
 	// render view
 	$itemView = new CView('configuration.item.prototype.edit', $data);
 	$itemView->render();
