@@ -395,6 +395,11 @@ if (isset($_REQUEST['form'])) {
 		$data['form'] = 'clone';
 	}
 
+	// Sort interfaces to be listed starting with one selected as 'main'.
+	CArrayHelper::sort($data['interfaces'], [
+		['field' => 'main', 'order' => ZBX_SORT_DOWN]
+	]);
+
 	// render view
 	$itemView = new CView('configuration.host.discovery.edit', $data);
 	$itemView->render();
