@@ -75,6 +75,7 @@ New features:
 ...G...... [ZBXNEXT-3930] increased MaxLinesPerSecond limit and adjusted formula to process more lines per second (vso)
 
 Bug fixes:
+..F....... [ZBX-11812] fixed sorting of host interfaces (miks)
 ..F....... [ZBX-11277] fixed update in mass update form when inventory mode is not set explicitly (gcalenko)
 ..F....... [ZBX-12182] fixed missed page number in problems export (miks)
 ..F....... [ZBX-11309] fixed unchecked checkboxes after deleting script, mediatype or proxy (miks)
@@ -504,6 +505,7 @@ A.F....... [ZBX-1357] updated Chinese (China), Czech, English (United States), K
 .......PS. [ZBXNEXT-3659] reduced cache locking time during configuration synchronization (wiper)
 
 Bug fixes:
+..F....... [ZBX-11812] fixed sorting of host interfaces (miks)
 ..F....... [ZBX-11277] fixed update in mass update form when inventory mode is not set explicitly (gcalenko)
 ..F....... [ZBX-10999] fixed user's access level to display popup content (miks)
 ..F....... [ZBX-9213] removed link from uneditable template and host names in all configuration sections (miks)
